--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,24 +1,26 @@
-body { background-color: rgb(31, 155, 47) }
+/* body { background-color: rgb(31, 155, 47) } */
       #container {
-        width: 960px;
+        text-align: center;
+        width: 90%;
         margin-left: auto;
         margin-right: auto;
         padding-top: 5%;
+        margin-bottom: 10px;
       }
       #articles {
+        margin-left: 10px;
         display: inline-block;
         overflow: auto;
-        width: 60%;
         height: 700px;
       }
       #notes {
         float: right;
-        width: 30%;
+        margin-right: 10px;
       }
       textarea, input {
         display: block;
         width: 100%;
-        background-color: #FCF5C7;
+        background-color: rgb(255, 255, 255);
       }
       input {
         height: 36px;
